--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Baby Photographer</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,8 +23,15 @@
 </head>
 
 <body>
-
-  <!-- Add your site or application content here -->
+  <nav>
+    <section class="navbar">
+        <a href="#">Accueil</a>
+        <a href="#">Galerie</a>
+        <a href="#">Tarifs</a>
+        <a href="#">A propos</a>
+        <a href="#">Contact</a>
+    </section>
+  </nav>
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
