Ajout font, ajout maquette desktop

--- a/index.html
+++ b/index.html
@@ -14,25 +14,49 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@700&family=Lobster&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
   <nav>
-    <section class="navbar">
+    <section>
+      <article class="navbar">
         <a href="#">Accueil</a>
         <a href="#">Galerie</a>
         <a href="#">Tarifs</a>
         <a href="#">A propos</a>
         <a href="#">Contact</a>
+      </article>
     </section>
   </nav>
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <section>
+    <article class="presentation">
+      <h1>Présentation</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Pellentesque a egestas felis. Fusce odio massa, feugiat vitae mauris at, vestibulum mattis lacus.
+        Pellentesque et rhoncus felis. Maecenas ullamcorper fermentum sem, lobortis rutrum sem blandit vel.
+        Suspendisse sit amet quam metus. Donec nec turpis vel elit mattis accumsan. In blandit ante vitae urna fringilla, vel facilisis risus molestie. Morbi in bibendum sem, vel posuere est.
+        Maecenas massa neque, sagittis eu enim sit amet, malesuada ornare ligula. Curabitur sed nunc et purus gravida posuere.
+        Nullam at felis ut nulla tincidunt tristique eget ac lacus. Aenean vitae magna vestibulum dolor interdum pretium at et felis. Nam enim ipsum, sollicitudin eget pellentesque id, blandit a turpis.
+        Praesent mattis sollicitudin tincidunt. Curabitur vel velit mollis, rutrum orci vel, fringilla urna.
+      </p>
+    </article>
+  </section>
+  <section>
+    <article>
+
+    </article>
+  </section>
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
