ajout section gallery et prices + photo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@700&family=Lobster&display=swap" rel="stylesheet">
-
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -49,12 +48,32 @@
         Praesent mattis sollicitudin tincidunt. Curabitur vel velit mollis, rutrum orci vel, fringilla urna.
       </p>
     </article>
-  </section>
-  <section>
-    <article>
-
+    </section>
+  <section class="gallery">
+    <article id="slider">
+      <figure>
+        <img src="img/baby1.jpg" alt>
+        <img src="img/baby2.jpg" alt>
+        <img src="img/baby3.jpg" alt>
+        <img src="img/baby4.jpg" alt>
+      </figure>
     </article>
   </section>
+  <section class="prices">
+    <article>
+      <div class="solo">
+        <h1>Solo</h1>
+      </div>
+      <div class="group">
+        <h1>Group</h1>
+      </div>
+      <div class="family">
+        <h1>Family</h1>
+      </div>
+    </article>
+  </section>
+
+
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
