--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <nav>
     <section>
       <article class="navbar">
-        <a href="#">Accueil</a>
-        <a href="#">Galerie</a>
-        <a href="#">Tarifs</a>
-        <a href="#">A propos</a>
+        <a href="#">About</a>
+        <a href="#">Gallery</a>
+        <a href="#">Home</a>
+        <a href="#">Prices</a>
         <a href="#">Contact</a>
       </article>
     </section>
