stucture end, start inside

--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
       </div>
     </article>
   </section>
+  <section class="contact">
+    <article>
+      <div class="mail">
+        
+      </div>
+      <div class="Number">
+
+      </div>
+      <div class="address">
+      
+      </div>
+      <div class="form">
+
+      </div>
+    </article>
+  </section>
 
 
 
