--- a/index.html
+++ b/index.html
@@ -68,19 +68,22 @@
       </nav>
     </article>
   </section>
-  <section class="prices">
-    <article>
+  <section>
+    <article class="prices">
       <div class="solo">
-        <img src="#" alt="">
-        <h1>Solo</h1>
+        <img src="img/appareil.png" alt="">
+        <figcaption>Solo - 10€</figcaption>
+        <input type="button" value="Purchase">
       </div>
       <div class="group">
-        <img src="#" alt="">
-        <h1>Group</h1>
+        <img src="img/appareil.png" alt="">
+        <figcaption>Group - 50€</figcaption>
+        <input type="button" value="Purchase">
       </div>
       <div class="family">
-        <img src="#" alt="">
-        <h1>Family</h1>
+        <img src="img/appareil.png" alt="">
+        <figcaption>Family - 100€</figcaption>
+        <input type="button" value="Purchase">
       </div>
     </article>
   </section>
